[project]
name = "pogo-max-particle-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Gérard Lichtert",email = "62557229+thebaconfate@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
